- Added npm scripts - Wrapped Systembanner to allow fixed positioning - Refactored JS logic to reuse banner in pimcore js

--- a/assets/pimcore/systemBanner.scss
+++ b/assets/pimcore/systemBanner.scss
@@ -1,66 +1,68 @@
-body {
-  overflow: hidden;
-}
-
-#system-banner {
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: sans-serif;
-  margin: 0;
-  min-width: 100px;
-  padding: 10px 0;
-  position: absolute;
+.system-banner {
+  position: fixed;
   right: 0;
-  text-align: center;
-  text-transform: uppercase;
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
   top: 0;
-  transform: translateX(30%) translateY(0%) rotate(45deg);
-  transform-origin: top left;
   z-index: 9999;
-}
 
-#system-banner:before,
-#system-banner:after {
-  content: '';
-  height: 100%;
-  margin: 0 -1px;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
+  &__banner {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    margin: 0;
+    width: 100px;
+    padding: 10px 0;
+    pointer-events: none;
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    top: 0;
+    transform: translateX(30%) translateY(0%) rotate(45deg);
+    transform-origin: top left;
 
-#system-banner:before {
-  right: 100%;
-}
+    &:before,
+    &:after {
+      content: '';
+      height: 100%;
+      margin: 0 -1px;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
 
-#system-banner:after {
-  left: 100%;
-}
+    &:before {
+      right: 100%;
+    }
 
-#system-banner.system-banner--prod:before,
-#system-banner.system-banner--prod:after,
-#system-banner.system-banner--prod {
-  background-color: #b80b0b;
-}
+    &:after {
+      left: 100%;
+    }
+  }
 
-#system-banner.system-banner--dev:before,
-#system-banner.system-banner--dev:after,
-#system-banner.system-banner--dev {
-  background-color: #00a808;
-}
 
-#system-banner.system-banner--stage:before,
-#system-banner.system-banner--stage:after,
-#system-banner.system-banner--stage {
-  background-color: #ffff33;
-}
+  &--prod .system-banner__banner:before,
+  &--prod .system-banner__banner:after,
+  &--prod .system-banner__banner {
+    background-color: #b80b0b;
+  }
 
-#system-banner.system-banner--test:before,
-#system-banner.system-banner--test:after,
-#system-banner.system-banner--test {
-  background-color: #a067cf;
+  &--dev .system-banner__banner:before,
+  &--dev .system-banner__banner:after,
+  &--dev .system-banner__banner {
+    background-color: #00a808;
+  }
+
+  &--stage .system-banner__banner:before,
+  &--stage .system-banner__banner:after,
+  &--stage .system-banner__banner {
+    background-color: #ffff33;
+  }
+
+  &--test .system-banner__banner:before,
+  &--test .system-banner__banner:after,
+  &--test .system-banner__banner {
+    background-color: #a067cf;
+  }
 }
